Add train.py, MLflow tracking, first run complete

--- a/requirements.txt
+++ b/requirements.txt
@@ -108,6 +108,7 @@ nest-asyncio==1.6.0
 nltk==3.9.3
 notebook_shim==0.2.4
 numpy==1.26.4
+nvidia-nccl-cu12==2.29.3
 opentelemetry-api==1.39.1
 opentelemetry-proto==1.39.1
 opentelemetry-sdk==1.39.1
@@ -194,4 +195,5 @@ webencodings==0.5.1
 websocket-client==1.9.0
 websockets==16.0
 Werkzeug==3.1.6
+xgboost==3.2.0
 zipp==3.23.0
