Force MLflow local path fix

--- a/.github/workflows/retrain.yml
+++ b/.github/workflows/retrain.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Run drift detection
         run: python src/drift_detector.py
 
-      - name: Run retraining pipeline
+     - name: Run retraining pipeline
         run: python src/retrain_pipeline.py
         env:
-          MLFLOW_TRACKING_URI: sqlite:///mlflow.db
+          MLFLOW_TRACKING_URI: sqlite:///./mlflow.db
