--- a/.github/workflows/retrain.yml
+++ b/.github/workflows/retrain.yml
@@ -23,8 +23,7 @@ jobs:
           python-version: "3.10"
 
       - name: Install dependencies
-        run: pip install mlflow fastapi uvicorn pydantic evidently==0.4.30 scikit-learn pandas numpy xgboost
-
+        run: pip install mlflow==2.9.2 fastapi uvicorn pydantic evidently==0.4.30 scikit-learn pandas numpy xgboost
       - name: Run drift detection
         run: python src/drift_detector.py
 
